# BurgerShop3Bot

./: .gitignore  CMakeLists.txt  README.md
include/: Content.h  Debugging.h  Managers.h  Utils.h
resources/: bsfood.txt  food.dtd  food.xml
resources/itemdata/: AlfredoSauce.txt  AlfredoSauce_Plate.txt  ApplePie.txt  Bacon.txt  BaconBits.txt  BaconBits_Potato.txt  BaconBits_Soup.txt  BaconBits_Soup@BaconBits.txt  Bacon_Plate.txt  Banana.txt  Basil.txt  Basil_Plate.txt  Basket.txt  Basket_Butter_Breadloaf.txt  Basket_Butter_Breadslice.txt  Basket_Butter_Breadslice@Butter.txt  Basket_Butter_Breadslice@MexOlives.txt  Basket_Butter_Breadslice@Ramekin.txt  Basket_Butter_Breadslice@TomatoSauce.txt  Basket_Butter_Breadslice@TomatoSauceIcon.txt  Basket_Mask.txt  BeefPatty.txt  Blueberries.txt  Blueberries@Cake_Blueberries.txt  Boba_LargeCup.txt  Boba_LargeTea.txt  BottomBun.txt  Bowl.txt  Bowl_Asian.txt  Bowl_Asian_Mask.txt  Bowl_Mask.txt  Breadloaf.txt  Breadloaf_Basket.txt  Breadslice.txt  BreadsliceToasted.txt  Breadslice_Basket.txt  Breadslice_Dinner.txt  Breadslice_DinnerToasted.txt  Breadslice_DinnerToasted@Cornbread.txt  Breadslice_DinnerToasted@Kaiserroll.txt  (+909 more)
src/: main.cpp
src/Data/: Content.cpp  Managers.cpp
src/Debug/: Debugging.cpp
src/Utils/: Utils.cpp
src/include/: Content.h  Debugging.h  Managers.h  Utils.h
